# SuperDeepResearch

./: .gitignore  README.md  implementation.md  pyproject.toml  requirements.txt  run.py  run_server.py
docs/: README.md
docs/diagrams/: sequence.md
mcp_server/: README.md  __init__.py  logging_config.py  server.py
mcp_server/tools/: README.md  __init__.py  combine_tool.py  e2e_tool.py  orchestrator.py  plan_tool.py  research_engine.py  single_research.py  upload_tool.py
mcp_server/tools/browser_use/: __init__.py
mcp_server/tools/gemini_research/: __init__.py  __main__.py  automation.py  config.py  nodriver_automation.py
mcp_server/tools/research_scrapers/: README.md  __init__.py
mcp_server/tools/research_scrapers/core/: __init__.py  auth.py  base.py  config.py
mcp_server/tools/research_scrapers/drivers/: __init__.py  browser_use.py  nodriver.py  patchright.py
mcp_server/tools/research_scrapers/sites/: __init__.py
mcp_server/tools/research_scrapers/sites/gemini/: README.md  __init__.py  scraper.py
mcp_server/tools/research_scrapers/sites/perplexity/: README.md  __init__.py  scraper.py
scripts/: README.md  deploy.sh  local_test.sh  test_browser_use.py  test_deep_research.py  test_deep_research_nodriver.py  test_nodriver.py  test_patchright.py
