[project]
name = "deep-research-mcp"
version = "0.1.0"
description = "MCP server for multi-product deep research"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
keywords = ["MCP", "Deep Research", "LangChain", "LangGraph"]

dependencies = [
  "langchain==0.0.1",
  "langgraph==0.0.1",
  "browser-use==0.0.1",
  "requests==2.31.0",
  "google-auth==2.21.0",
  "google-auth-oauthlib==1.0.0",
  "google-auth-httplib2==0.1.0",
  "httpx==0.24.1",
  "fastapi==0.103.2",
  "uvicorn==0.23.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 